--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head> </head>
 
 <body class='background-color-main'>
-    <h1>My First Heading</h1>
+    <h1>{{nhl_dict.header}}</h1>
     <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Page 1</a></li>
