--- a/templates/index.html
+++ b/templates/index.html
@@ -12,36 +12,44 @@
     crossorigin="" />
 
     <!-- Our Css -->
-    <link rel="stylesheet" type="text/css" href="resource/styles.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
+    <!-- d3 -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+
 </head>
 
     <body class='background-color-main'>
     <h1>Take A Trip To Educate Yourself!</h1>
     <ul>
         <li><a href="">Home</a></li>
-<!--         <li><a href="">Page 1</a></li>
-        <li><a href="">Page 2</a></li>
-        <li><a href="">Page 3</a></li> -->
+<!--         <li><a href="">Page 1</a></li>-->
     </ul>
+
     <br>
+
     <div >
         <p class='paragraph-container'> Where are the hot spots for student travel and costs associated with those locations! </p>
     </div>
+
     <!-- The div where we will inject our map -->
-        <div id="map"></div>
+    <div id="map"></div>
+
     <!-- Drop down selection -->
     <select id="selDataset" onchange="optionChanged(this.value)"></select> 
+
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
     <!-- static folder is important.  -->
-    <script src="/static/js/barchart.js"></script>
+    <script src="../static/js/barchart.js"></script>
+
     <!-- API key -->
-    <script type="text/javascript" src="Resources/config/config.js"></script>
+    <script type="text/javascript" src="../static/config/config.js"></script>
+
     <!-- JS -->
-    <script type="text/javascript" src="Resources/js/studyabroad.js"></script>
-    <!-- d3 -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script type="text/javascript" src="../static/js/studyabroad.js"></script>
+
 </body>
 
 <footer> 
