--- a/templates/index.html
+++ b/templates/index.html
@@ -7,39 +7,52 @@
     <title>Overseas Education Costs</title>
 
     <!-- leaflet css -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+   crossorigin=""/>
+
+      <!-- Bring in our bootstrap stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Our Css -->
     <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
     <!-- d3 -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3.v5.js"></script>
+    
+    <!-- Plotly -->
+    <script src="plotly-latest.min.js"></script>
+    <script src=“https://cdn.plot.ly/plotly-latest.min.js”></script>
 
 </head>
-
     <body class='background-color-main'>
-    <h1>Take A Trip To Educate Yourself!</h1>
-    <ul>
-        <li><a href="">Home</a></li>
-<!--         <li><a href="">Page 1</a></li>-->
-    </ul>
-
+  <!--   <div class="container"> -->
+    <img width="me-auto" src="https://wiki.optimy.com/wp-content/uploads/2017/07/powerful-education-770x383.jpg" class="d-block w-100" alt="https://miro.medium.com/max/640/0*cyBfRBBUIs4XzH8n.">
+    <h1>Destination?? EDUCATION!!</h1>
     <br>
-
     <div >
-        <p class='paragraph-container'> Where are the hot spots for student travel and costs associated with those locations! </p>
+        <p class='paragraph-container'> Locate international education hotspots based on your fellow world travelers! </p>
     </div>
 
-    <!-- The div where we will inject our map -->
-    <div id="map"></div>
+    <!-- Leaflet Map ID and class for css -->
+    <div id="map" class="center"></div>
+
+    <!-- breakstatement to give space between map and barchart info    -->
+    <br>
 
     <!-- Drop down selection -->
-    <select id="selDataset" onchange="optionChanged(this.value)"></select> 
+    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+    <!-- Public tution bar chart-->
+            <div id="bar1"></div>
+    <!-- Private tution bar chart -->
+            <div id="bar2"></div>
 
-    <!-- Leaflet JS -->
+ <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+     crossorigin=""></script>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <!-- static folder is important.  -->
     <script src="../static/js/barchart.js"></script>
@@ -49,7 +62,7 @@
 
     <!-- JS -->
     <script type="text/javascript" src="../static/js/studyabroad.js"></script>
-
+   
 </body>
 
 <footer> 
