updated styles, index, studyabroad

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,8 @@
   <!--   <div class="container"> -->
     <img width="me-auto" src="https://wiki.optimy.com/wp-content/uploads/2017/07/powerful-education-770x383.jpg" class="d-block w-100" alt="https://miro.medium.com/max/640/0*cyBfRBBUIs4XzH8n.">
     <h1>Destination?? EDUCATION!!</h1>
-    <br>
     <div >
-        <p class='paragraph-container'> Locate international education hotspots based on your fellow world travelers! </p>
+        <p class='paragraph-container'> Locate international education hotspots from your fellow world travelers! </p>
     </div>
 
     <!-- Leaflet Map ID and class for css -->
@@ -40,9 +39,9 @@
     <!-- Drop down selection -->
     <select id="selDataset" onchange="optionChanged(this.value)"></select>
     <!-- Public tution bar chart-->
-            <div id='bar1'></div>
+            <div id='bar1' class="center"></div>
     <!-- Private tution bar chart -->
-            <div id='bar2'></div>
+            <div id='bar2' class="center"></div>
 
  <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
@@ -65,7 +64,7 @@
 
 <footer class="footer">
 <p class="footerP">© Brought to you by the Sour Patch Kids © **no affiliation with the delicious candy**</p>
-<a href="https://sourpatchkids.com/"><img class="candyicon" src="https://i.pinimg.com/originals/48/29/7e/48297ed0cd1992e34077a7a50cdd7cbf.jpg" atl="..."/></a>
+<a href="https://sourpatchkids.com/"><img class="candyicon" src="https://i.pinimg.com/originals/48/29/7e/48297ed0cd1992e34077a7a50cdd7cbf.jpg" atl="HTML"/></a>
 
 </footer>
 
