--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,7 +14,9 @@ ul {
 
 h1{
     text-align: center;
-    font: 40px Papyrus, sans-serif;
+    font: 60px Papyrus, sans-serif;
+    margin: auto;
+    background-color: gold;
 }
 
 .background-color-main{
@@ -28,10 +30,11 @@ h1{
     margin: 20px;
 }
 .paragraph-container{
-    color:white;
-    font: 15px Papyrus, sans-serif;
+    color: black;
+    font: 30px Papyrus, sans-serif;
     background-color: #A9CEF4;
     text-align: center;
+    line-height:10vh;
 }
 
 .d-block{
@@ -51,4 +54,49 @@ body,
   margin-left: auto;
   margin-right: auto;
   width: 95%;
+}
+
+html,
+body,
+#bar1{
+height: 85%;
+padding: 5;
+margin: 5;  
+}
+
+.bar1
+
+html,
+body,
+#bar2{
+height: 85%;
+padding: 5;
+margin: 5;
+}   
+
+.footer{
+background-color:gold;
+margin:0;
+padding:0;
+width:100%;
+height:15.5vh;
+float:center;
+}
+
+.footerP{
+color:black;
+font-family: Papyrus, sans-serif;
+font-size:25px;
+text-align:left;
+margin:auto;
+padding:10px;
+line-height:10vh;
+}
+
+.candyicon{
+width:15vw;
+height:20vh;
+float:right;
+padding: 10px;
+margin: auto;
 }
