--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
     <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    <!-- Marker Cluster CSS -->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
+
     <!-- d3 -->
     <script src="https://d3js.org/d3.v5.js"></script>
 
@@ -26,12 +31,17 @@
   <!--   <div class="container"> -->
     <img width="me-auto" src="https://wiki.optimy.com/wp-content/uploads/2017/07/powerful-education-770x383.jpg" class="d-block w-100" alt="https://miro.medium.com/max/640/0*cyBfRBBUIs4XzH8n.">
     <h1>Destination?? EDUCATION!!</h1>
+
     <div >
         <p class='paragraph-container'> Locate international education hotspots from your fellow world travelers! </p>
     </div>
 
     <!-- Leaflet Map ID and class for css -->
     <div id="map" class="center"></div>
+    <br>
+    <div >
+        <p class='dataclarify'>Inbound represents the students coming from the US into the selected country. Outbound refers to the students from the selected country studying in the United States.</p>
+    </div>
 
     <!-- breakstatement to give space between map and barchart info    -->
     <br>
@@ -50,6 +60,9 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <!-- Marker Cluster JS -->
+    <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
 
     <!-- API key -->
     <script type="text/javascript" src="../static/config/config.js"></script>
