--- a/templates/index.html
+++ b/templates/index.html
@@ -40,14 +40,14 @@
     <div id="map" class="center"></div>
     <br>
     <div >
-        <p class='dataclarify'>Inbound represents the students coming from the US into the selected country. Outbound refers to the students from the selected country studying in the United States.</p>
+        <p class='dataclarify'>Inbound represents the students coming from the US into the selected country. Outbound refers to the students from the selected country studying in the United States. Data is from 2018-2019 school year.</p>
     </div>
 
     <!-- breakstatement to give space between map and barchart info    -->
     <br>
 
     <!-- Drop down selection -->
-    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+    <select id="selDataset" class="dropdown" onchange="optionChanged(this.value)"></select>
     <!-- Public tution bar chart-->
             <div id='bar1' class="center"></div>
     <!-- Private tution bar chart -->
