--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
     <!-- d3 -->
     <script src="https://d3js.org/d3.v5.js"></script>
 
+    <!-- Apex charts -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
 </head>
     <body class='background-color-main'>
   <!--   <div class="container"> -->
@@ -48,10 +51,12 @@
 
     <!-- Drop down selection -->
     <select id="selDataset" class="dropdown" onchange="optionChanged(this.value)"></select>
-    <!-- Public tution bar chart-->
+    <!-- Public/Private tution bar chart-->
             <div id='bar1' class="center"></div>
-    <!-- Private tution bar chart -->
-            <div id='bar2' class="center"></div>
+            
+            <br>
+    <!-- Apexbar Chart inbound vs outbound numbers -->
+            <div id='chart' class="center"></div>
 
  <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
@@ -68,10 +73,12 @@
     <script type="text/javascript" src="../static/config/config.js"></script>
 
     <!-- JS -->
-    <script type="text/javascript" src="../static/js/studyabroad.js"></script>
-
     <!-- static folder is important.  -->
+    <script type="text/javascript" src="../static/js/studyabroad.js"></script>
     <script type="text/javascript" src="../static/js/barchart.js"></script>
+    <!-- <script type="text/javascript" src="../static/js/apex.js"></script> -->
+
+
    
 </body>
 
