--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,25 @@
 </head>
     <body class='background-color-main'>
   <!--   <div class="container"> -->
-    <img width="me-auto" src="https://wiki.optimy.com/wp-content/uploads/2017/07/powerful-education-770x383.jpg" class="d-block w-100" alt="https://miro.medium.com/max/640/0*cyBfRBBUIs4XzH8n.">
+    <div class='container'>
+        <div class='row'>
+        <div class="col-3 col-xs-12">
+            <!-- <a class="thumbnail" href="#"> -->
+                <img class="img-gif" img width="me-auto"  src="https://media.giphy.com/media/H48YKEw3fXrcvIF2xE/giphy.gif" alt="...">
+            <!-- </a> -->
+        </div>      
+        <div class="col-6 col-xs-12">
+            <!-- <a class="thumbnail" href="#">         -->
+            <img class="img-responsive" width="me-auto" src="https://wiki.optimy.com/wp-content/uploads/2017/07/powerful-education-770x383.jpg" alt="https://miro.medium.com/max/640/0*cyBfRBBUIs4XzH8n.">
+            <!-- </a> -->
+        </div>
+        <div class="col-3 col-xs-12">
+            <!-- <a class="thumbnail" href="#"> -->
+            <img class="img-gif" width="me-auto" src="https://media.giphy.com/media/oimCQlndn6KPe/giphy.gif" alt="...">
+            <!-- </a> -->
+        </div>
+    </div>
+    </div>
     <h1>Destination?? EDUCATION!!</h1>
 
     <div >
@@ -53,7 +71,7 @@
     <select id="selDataset" class="dropdown" onchange="optionChanged(this.value)"></select>
     <!-- Public/Private tution bar chart-->
             <div id='bar1' class="center"></div>
-            
+
             <br>
     <!-- Apexbar Chart inbound vs outbound numbers -->
             <div id='chart' class="center"></div>
@@ -76,7 +94,6 @@
     <!-- static folder is important.  -->
     <script type="text/javascript" src="../static/js/studyabroad.js"></script>
     <script type="text/javascript" src="../static/js/barchart.js"></script>
-    <!-- <script type="text/javascript" src="../static/js/apex.js"></script> -->
 
 
    
