index.html and css with gifs

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,9 @@
     <select id="selDataset" class="dropdown" onchange="optionChanged(this.value)"></select>
     <!-- Public/Private tution bar chart-->
             <div id='bar1' class="center"></div>
-
+    <div >
+        <p class='dataclarify'>The data sets for private tuition were difficult to come by. If this intrigues you, it will give you a starting place for expected costs for countries.</p>
+    </div>
             <br>
     <!-- Apexbar Chart inbound vs outbound numbers -->
             <div id='chart' class="center"></div>
