--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,14 +1,10 @@
+img{
+    border: none;
+    outline: 0;
+}
 a {
     display: block;
     padding: 8px;
-    background-color: #dddddd;
-}
-
-li {
-    float: left;
-}
-
-ul {
     background-color: #dddddd;
 }
 
@@ -18,38 +14,39 @@ h1{
     margin: auto;
     background-color: gold;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid #000099;
 }
 
+
 .background-color-main{
-    background-color: #7EA0B7
+    background-color: #7EA0B7;
+    width:100%;
 }
-.container-1{
+.container{
     background-color: #597081;
-    width: 300px;
-    border: 15px solid green;
-    padding: 50px;
-    margin: 20px;
 }
+
 .paragraph-container{
     color: black;
     font: 30px Papyrus, sans-serif;
     background-color: #A9CEF4;
     text-align: center;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid #000099;
+    width: 90%
+    margin: auto;
 }
 
 .dataclarify{
     color: black;
-    font: 18px Papyrus, sans-serif;
+    font: 25px Papyrus, sans-serif;
     background-color: #A9CEF4;
     text-align: left;
     margin:15px;
     padding: 15px;
     line-height:5vh;
     border-radius: 25px;
-    border: 2px solid #73AD21;
+    border: 2px solid #000099;
 }
 
 .dropdown{
@@ -74,6 +71,7 @@ body,
   height: 85%;
   padding: 15;
   margin: 15;
+  fill-outline-color:#000099;
 }
 
 .center {
@@ -91,47 +89,46 @@ padding: 5;
 margin: 5;
 }
 
-/*html,
-body,
-#bar2{
-height: 85%;
-padding: 5;
-margin: 5;
-}   
-*/
-
-html,
-body,
 #chart{
-height: 85%;
+height: 50%;
 padding: 5;
 margin: 5;
+background-color: #A9CEF4;
+border: 2px solid #000099;
 }
 
 .footer{
 background-color:gold;
-margin:0;
-padding:0;
+border:none;
 width:100%;
-height:15.5vh;
-float:center;
+border-radius: 25px;
+border: 2px solid #000099;
 }
 
 .footerP{
+border:none;
 color:black;
 font-family: Papyrus, sans-serif;
 font-size:25px;
 text-align:left;
 margin:auto;
-padding:10px;
-line-height:10vh;
+padding:100px;
 }
 
-.candyicon{
+.footerN{
+color:black;
+font-family: Papyrus, sans-serif;
+font-size:25px;
+text-align:center;
+margin:auto;
+padding:100px;
+}
+
+.coffeeicon{
 width:15vw;
-height:20vh;
+height:15vh;
 float:right;
-padding: 10px;
+padding: 15px;
 margin: auto;
 object-fit: contain;
 }
